# rbspy

./: .cirrus.yml  .dockerignore  .gitignore  .travis.yml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  License.md  Makefile  NEW_RUBY_VERSION_CHECKLIST.md  README.md  RELEASE_CHECKLIST.md  appveyor.yml  bindgen.sh  build.rs  build.sh  codegen.py  codegens.sh  config.toml  gdb.script  infinite.rb  look-at-ruby.c  perf-syscall.c  perf_event_attr_struct.c  todos.txt  write-syscall.c
.github/workflows/: ci.yml  coredump.yml  publish-crate.yml  publish-docker-images.yml  publish-homebrew.yml  ruby-bindings.yml  ruby-latest.yml  ruby-version-tests.yml
benches/: bench.rs
ci/: Dockerfile.localtest  Vagrantfile  after_success.sh  before_deploy.sh  docker-tests.sh  freebsd-build.sh  install.sh  localtest.sh  script.sh
ci/docker/: Dockerfile  Dockerfile.arch2018  Dockerfile.bindgen  Dockerfile.containers  Dockerfile.fedora  Dockerfile.ubuntu1404  Dockerfile.ubuntu1704  sources.list.trusty  sources.list.xenial
ci/ruby-programs/: cme_complex_labels.rb  infinite.rb  infinite_off_cpu.rb  infinite_on_cpu.rb  interesting_backtrace_helper.rb  recurse-sleep.rb  ruby_exec.rb  ruby_forks.rb  thread_churn.rb  unicode_stack.rb
ci/testdata/: debug_info  debug_str  map.txt
docker/: Dockerfile.arch2018  Dockerfile.fedora  Dockerfile.ubuntu1404  Dockerfile.ubuntu1604
examples/: record.rs  report.rs  run_forever.rs  short_program.rb  snapshot.rs
examples/include/: mod.rs
ruby-bindings/: Cargo.toml
ruby-bindings/src/: ruby_1_9_1_0.rs  ruby_1_9_2_0.rs  ruby_1_9_3_0.rs  ruby_2_0_0_0.rs  ruby_2_1_2.rs  ruby_2_2_0.rs  ruby_2_2_1.rs  ruby_2_2_6.rs  ruby_2_3_0.rs  ruby_2_3_5.rs  ruby_2_3_6.rs  ruby_2_4_1.rs  ruby_2_4_2.rs  ruby_2_5_0_rc1.rs
ruby-structs/: Cargo.toml  License.md
ruby-structs/src/: lib.rs  ruby_1_9_1_0.rs  ruby_1_9_2_0.rs  ruby_1_9_3_0.rs  ruby_1_9_3_551.rs  ruby_2_0_0_0.rs  ruby_2_0_0_648.rs  ruby_2_1_0.rs  ruby_2_1_1.rs  ruby_2_1_10.rs  ruby_2_1_2.rs  ruby_2_1_3.rs  ruby_2_1_4.rs  ruby_2_1_5.rs  ruby_2_1_6.rs  ruby_2_1_7.rs  ruby_2_1_8.rs  ruby_2_1_9.rs  ruby_2_2_0.rs  ruby_2_2_1.rs  ruby_2_2_10.rs  ruby_2_2_2.rs  ruby_2_2_3.rs  ruby_2_2_4.rs  ruby_2_2_5.rs  ruby_2_2_6.rs  ruby_2_2_7.rs  ruby_2_2_8.rs  ruby_2_2_9.rs  ruby_2_3_0.rs  ruby_2_3_1.rs  ruby_2_3_2.rs  ruby_2_3_3.rs  ruby_2_3_4.rs  ruby_2_3_5.rs  ruby_2_3_6.rs  ruby_2_3_7.rs  ruby_2_3_8.rs  ruby_2_4_0.rs  ruby_2_4_1.rs  (+72 more)
scripts/: Dockerfile  README.md  bindgen.sh
src/: address_finder.rs  callgrind.rs  copy.rs  descendents.rs  dwarf.rs  dwarf_bindings.rs  initialize.rs  lib.rs  mac_maps.rs  main.rs  malloc.rs  output.rs  proc_maps.rs  ruby-lib.c  ruby_bindings.rs  ruby_version.rs  ruby_vm.rs  stack_trace.rs  test_utils.rs
src/bindings/: mod.rs  ruby_1_9_3_0.rs  ruby_2_1_0.rs  ruby_2_1_1.rs  ruby_2_1_10.rs  ruby_2_1_8.rs  ruby_2_2_0.rs  ruby_2_2_2.rs  ruby_2_2_3.rs  ruby_2_2_4.rs  ruby_2_2_7.rs  ruby_2_3_0.rs  ruby_2_3_1.rs  ruby_2_3_4.rs  ruby_2_3_5.rs  ruby_2_4_0.rs  ruby_2_4_1.rs  ruby_2_4_2.rs  ruby_2_5_0_rc1.rs
src/core/: address_finder.rs  copy.rs  initialize.rs  mac_maps.rs  mod.rs  proc_maps.rs  process.rs  ruby_spy.rs  ruby_version.rs  supported_ruby_versions.rs  types.rs
src/core/proc_maps/: linux_maps.rs  mac_maps.rs  mod.rs
src/recorder/: mod.rs  record.rs  snapshot.rs
src/sampler/: mod.rs  record.rs  snapshot.rs
src/storage/: mod.rs  v0.rs  v1.rs  v2.rs
src/ui/: callgrind.rs  descendents.rs  flamegraph.rs  mod.rs  output.rs  perftools.profiles.rs  pprof.rs  speedscope.rs  summary.rs
testdata/: debug_abbrev
testdata/ruby-programs/: infinite.rb
xtask/: Cargo.toml
xtask/src/: bindgen.rs  main.rs
