[package]
name = "rbspy"
version = "0.33.0"
authors = ["Adam Jensen <acjensen@gmail.com>", "Julia Evans <julia@jvns.ca>"]
description = "Sampling CPU profiler for Ruby"
keywords = ["ruby", "profiler", "MRI"]
license = "MIT"
repository = "https://github.com/rbspy/rbspy"
readme = "README.md"
documentation = "https://github.com/rbspy/rbspy"
homepage = "https://rbspy.github.io/"
edition = "2021"
exclude = ["/.github/", "/ci/", "/xtask/"]
rust-version = "1.56"

[workspace]
members = [
    "ruby-structs",
    "xtask",
]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.36", features = ["derive"] }
ctrlc = "3.4.6"
directories = "6.0.0"
env_logger = "0.11.8"
inferno = "0.12.0"
flate2 = "1.1.1"
lazy_static = "1.4"
libc = "0.2.168"
log = "0.4.6"
memmap2 = "0.9.5"
proc-maps = "0.4.0"
prost = "0.13.4"
rand = "0.9.0"
rbspy-ruby-structs = { path = "ruby-structs", version="0.33.0" }
remoteprocess = "0.5.0"
semver = "1.0.25"
serde = "1.0.216"
serde_derive = "1.0.216"
serde_json = "1.0.138"
spytools = "0.3.0"
terminal_size = "0.4.1"
tempfile = "3.16.0"
thiserror = "2.0.11"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["user"] }

[target.'cfg(target_os="macos")'.dependencies]
libproc = "0.14.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["timeapi", "wow64apiset"] }

[dev-dependencies]
byteorder = "1.4.3"
rbspy-testdata = "0.2.2"

[profile.release]
lto = true
