[package]
name = "rbspy"
version = "0.38.0"
authors = ["Adam Jensen <acjensen@gmail.com>", "Julia Evans <julia@jvns.ca>"]
description = "Sampling CPU profiler for Ruby"
keywords = ["ruby", "profiler", "MRI"]
license = "MIT"
repository = "https://github.com/rbspy/rbspy"
readme = "README.md"
documentation = "https://github.com/rbspy/rbspy"
homepage = "https://rbspy.github.io/"
edition = "2021"
exclude = ["/.github/", "/ci/", "/xtask/"]
rust-version = "1.56"

[workspace]
members = [
    "ruby-structs",
    "xtask",
]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.48", features = ["derive"] }
ctrlc = "3.5.0"
directories = "6.0.0"
env_logger = "0.11.8"
inferno = "0.12.3"
flate2 = "1.1.4"
lazy_static = "1.4"
libc = "0.2.176"
log = "0.4.28"
memmap2 = "0.9.8"
proc-maps = "0.4.0"
prost = "0.14.1"
rand = "0.9.2"
rbspy-ruby-structs = { path = "ruby-structs", version="0.38.0" }
remoteprocess = "0.5.0"
semver = "1.0.27"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
spytools = "0.3.1"
terminal_size = "0.4.3"
tempfile = "3.23.0"
thiserror = "2.0.17"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["user"] }

[target.'cfg(target_os="macos")'.dependencies]
libproc = "0.14.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["timeapi", "wow64apiset"] }

[dev-dependencies]
byteorder = "1.4.3"
rbspy-testdata = { git = "https://github.com/dalehamel/rbspy-testdata.git", branch = "update-coredumps" }

[profile.release]
lto = true
