[package]
name = "rbspy-ruby-structs"
version = "0.4.2"
authors = ["Julia Evans <julia@jvns.ca>"]
description = "Helper crate for rbspy. Contains Rust bindings for various internal Ruby structions for version 1.9.3 to 3.0.0"
license = "MIT"
repository = "https://github.com/jvns/rbspy"
documentation = "https://github.com/jvns/rbspy"
homepage = "https://github.com/jvns/rbspy"

[dependencies]
